<resources>
    <string name="app_name">Emergency Support System</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_info">Help Information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_name">Name</string>
    <string name="edit_email">Email</string>
    <string name="edit_contact">Contact No</string>
    <string name="edit_password">Password</string>
    <string name="back">Back</string>
    <string name="update">Update</string>


    <string-array name="emergency_arrays">
        <item>Car accident</item>
        <item>Injuries</item>
        <item>Car Failure</item>
        <item>Fire</item>
        <item>Other</item>
    </string-array>
</resources>
